tests/testcases/invalid/semantic/20_do_while_condition_not_bool.ciel
// Error: do-while condition must be of type 'bool'
struct S { int x; };
int main() {
    struct S s;
    do {
    } while (s);  // Error: s is struct, not bool, integral or float
    return 0;
}
